--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ channels==4.0.0
 #faiss==1.5.3
 faiss_cpu==1.7.4
 fire==0.4.0
-typer==0.9.0
+typer>=0.12.0
 # godot==0.1.1
 # google_api_python_client==2.93.0  # Used by search_engine.py
 lancedb==0.4.0
@@ -81,7 +81,7 @@ qianfan~=0.4.4
 dashscope~=1.19.3
 rank-bm25==0.2.2  # for tool recommendation
 jieba==0.42.1  # for tool recommendation
-volcengine-python-sdk[ark]~=1.0.94 # Solution for installation error in Windows: https://github.com/volcengine/volcengine-python-sdk/issues/5
+volcengine-python-sdk[ark]~=4.0.36 # Solution for installation error in Windows: https://github.com/volcengine/volcengine-python-sdk/issues/5
 gymnasium==0.29.1
 boto3~=1.34.69
 spark_ai_python~=0.3.30
