--- a/workspace/volopa_mass_payments/requirements.txt
+++ b/workspace/volopa_mass_payments/requirements.txt
@@ -1,4 +1,4 @@
 league/csv
-predis/predis
-laravel/sanctum
-laravel/horizon
+pusher/pusher-php-server
+laravel/framework:^10.0
+spatie/laravel-permission
