Retested Volopa System generation

--- a/workspace/volopa_mass_payments/requirements.txt
+++ b/workspace/volopa_mass_payments/requirements.txt
@@ -1,4 +1,3 @@
 league/csv
-pusher/pusher-php-server
-laravel/framework:^10.0
-spatie/laravel-permission
+spatie/laravel-query-builder
+laravel/sanctum
