Removed unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -167,6 +167,9 @@ examples/index_store.json
 *~$*
 workspace/my-blackjack.py
 industry/*.txt
+industry/*.md
+industry/volopa_system_*
+industry/*.json
 spareFiles/*
 tmp
 metagpt/roles/idea_agent.py
